--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
 </head>
-<body>
+<body ng-controller="PharmaSearchController as searchCtrl">
 HERE!
 </body>
 </html>
