--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,21 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/pharmaSearchController.js"></script>
+  <script type="text/javascript" src="js/secrets.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
+  <script type="text/javascript">
+    function initMap() {
+      var mapCanvas = document.getElementById('map');
+      var mapOptions = {
+        center: new google.maps.LatLng(44.5403, -78.5463),
+        zoom: 8,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+      }
+      var map = new google.maps.Map(mapCanvas, mapOptions);
+    }
+    google.maps.event.addDomListener(window, 'load', initMap);
+  </script>
 </head>
 
 <body ng-controller="PharmaSearchController as searchCtrl">
@@ -31,8 +46,7 @@
   </div>
 
   <div class="col-md-8">
-    Main View
-
+    <div id="map"></div>
   </div>
 </body>
 
