Add test for displaying results list

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,11 @@
   </nav>
 
   <div class="col-md-4">
-    <ul class="list-group list-group-flush">
+    <ul class="list-group list-group-flush resultslist">
       <li class="list-group-item">
-        <div class="name">Lloyds Pharmacy</div>
-        <div class="postcode">TD15 1LL</div>
-        <div class="phone">012345 12345</div>
+        <div class="name"></div>
+        <div class="postcode"></div>
+        <div class="phone"></div>
       </li>
     </ul>
   </div>
