--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,8 @@
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/pharmaSearchController.js"></script>
   <script type="text/javascript" src="js/secrets.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
-  <script type="text/javascript">
-    function initMap() {
-      var mapCanvas = document.getElementById('map');
-      var mapOptions = {
-        center: new google.maps.LatLng(44.5403, -78.5463),
-        zoom: 8,
-        mapTypeId: google.maps.MapTypeId.ROADMAP
-      }
-      var map = new google.maps.Map(mapCanvas, mapOptions);
-    }
-    google.maps.event.addDomListener(window, 'load', initMap);
-  </script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+  <script type="text/javascript" src="js/map.js"></script>
 </head>
 
 <body ng-controller="PharmaSearchController as searchCtrl">
