--- a/public/index.html
+++ b/public/index.html
@@ -9,23 +9,25 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/array.js"></script>
+  <script type="text/javascript" src="js/pharmaSearchController.js"></script>
 </head>
 
 <body ng-controller="PharmaSearchController as searchCtrl">
   <nav class="navbar">
     <a class="navbar-brand" href="#">Navbar</a>
     <form class="form-inline navbar-form pull-right">
-      <input class="form-control" type="text" placeholder="Search">
-      <button class="btn btn-success-outline" type="submit">Search</button>
+      <input class="form-control searchinput" type="text" placeholder="Search" ng-model="searchCtrl.searchTerm">
+      <button class="btn btn-success-outline searchbutton" ng-click="searchCtrl.doSearch()">Search</button>
     </form>
   </nav>
 
   <div class="col-md-4">
     <ul class="list-group list-group-flush resultslist">
-      <li class="list-group-item">
-        <div class="name"></div>
-        <div class="postcode"></div>
-        <div class="phone"></div>
+      <li class="list-group-item" ng-repeat="pharmacy in searchCtrl.searchResult">
+        <div class="name">{{ pharmacy[0] }}</div>
+        <div class="postcode">{{ pharmacy[7] }}</div>
+        <div class="phone"> {{ pharmacy[8] }}</div>
       </li>
     </ul>
   </div>
