--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/pharmaSearchController.js"></script>
-  <script type="text/javascript" src="js/mapController.js"></script>
   <!-- // <script type="text/javascript" src="js/secrets.js"></script> -->
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
   <script type="text/javascript" src="js/map.js"></script>
+
 </head>
 
 <body ng-controller="PharmaSearchController as searchCtrl">
@@ -35,10 +35,9 @@
     </ul>
   </div>
 
-  <div class="col-md-8" ng-controller="MapController as MapCtrl">
-    <div id="map"></div>
-    <p>Latitude {{MapCtrl.Lat}}</p>
-    <p>Longitude {{MapCtrl.Lon}}</p>
+  <div class="col-md-8">
+      <div id="map"></div>
+
   </div>
 </body>
 
