--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
   <div class="col-md-4">
     <ul class="list-group list-group-flush resultslist">
-      <li class="list-group-item" ng-repeat="pharmacy in searchCtrl.searchResult">
+      <li class="list-group-item" ng-repeat="pharmacy in searchCtrl.searchResult" ng-click='searchCtrl.getDetails(pharmacy)'>
         <div class="name">{{ pharmacy[0] }}</div>
         <div class="postcode">{{ pharmacy[7] }}</div>
         <div class="phone"> {{ pharmacy[8] }}</div>
@@ -36,7 +36,17 @@
     </ul>
   </div>
 
-  <div class="col-md-8">
+  <div class="col-md-8 detailed-view">
+    <div ng-if='searchCtrl.pharmacy' >
+      <p>{{ searchCtrl.pharmacy[0] }}</p>
+      <p>{{ searchCtrl.pharmacy[1] }}</p>
+      <p>{{ searchCtrl.pharmacy[2] }}</p>
+      <p>{{ searchCtrl.pharmacy[3] }}</p>
+      <p>{{ searchCtrl.pharmacy[4] }}</p>
+      <p>{{ searchCtrl.pharmacy[5] }}</p>
+      <p>{{ searchCtrl.pharmacy[6] }}</p>
+      <p>{{ searchCtrl.pharmacy[7] }}</p>
+    </div>
       <div id="map"></div>
 
   </div>
