--- a/public/index.html
+++ b/public/index.html
@@ -27,26 +27,32 @@
 
   <div class="col-md-4">
     <ul class="list-group list-group-flush resultslist">
-      <li class="list-group-item pharmacy-info" ng-repeat="pharmacy in searchCtrl.searchResult" ng-click='searchCtrl.getDetails(pharmacy)'>
+      <a class="list-group-item pharmacy-info" ng-repeat="pharmacy in searchCtrl.searchResult" ng-click='searchCtrl.getDetails(pharmacy)'>
         <div class="name">{{ pharmacy[0] }}</div>
         <div class="postcode">{{ pharmacy[7] }}</div>
         <div class="phone"> {{ pharmacy[8] }}</div>
-      </li>
+      </a>
     </ul>
   </div>
 
   <div class="col-md-8 detailed-view map-container">
-    <div ng-if='searchCtrl.pharmacy' >
-      <p>{{ searchCtrl.pharmacy[0] }}</p>
-      <p>{{ searchCtrl.pharmacy[1] }}</p>
-      <p>{{ searchCtrl.pharmacy[2] }}</p>
-      <p>{{ searchCtrl.pharmacy[3] }}</p>
-      <p>{{ searchCtrl.pharmacy[4] }}</p>
-      <p>{{ searchCtrl.pharmacy[5] }}</p>
-      <p>{{ searchCtrl.pharmacy[6] }}</p>
-      <p>{{ searchCtrl.pharmacy[7] }}</p>
+    <div ng-if='searchCtrl.pharmacy'>
+
+      <div class="panel panel-default">
+        <div class="panel-heading">{{ searchCtrl.pharmacy[0] }}</div>
+        <div class="panel-body">
+          <p>{{ searchCtrl.pharmacy[1] }}</p>
+          <p>{{ searchCtrl.pharmacy[2] }}</p>
+          <p>{{ searchCtrl.pharmacy[3] }}</p>
+          <p>{{ searchCtrl.pharmacy[4] }}</p>
+          <p>{{ searchCtrl.pharmacy[5] }}</p>
+          <p>{{ searchCtrl.pharmacy[6] }}</p>
+          <p>{{ searchCtrl.pharmacy[7] }}</p>
+        </div>
+      </div>
+
     </div>
-      <div id="map"></div>
+    <div id="map"></div>
 
   </div>
 </body>
